fixes view on iphone  - fixes invalid width of wide inputs  - small tweak of sign form CTA

--- a/htdocs/css/c.css
+++ b/htdocs/css/c.css
@@ -934,9 +934,7 @@ border-radius: 7px;
  border-radius: 7px;
  margin: 3px 0;
 }
-.page4 .largeButton.larger {
-    max-width: none !important;
-}
+
 .page4 form.hidden {
     display: none;
 }
@@ -1464,7 +1462,7 @@ footer a:hover {
   .page4 form {
     width: 90%;
   }
-  .page4 input, .page4 textarea {
+  .page4 input, .page4 textarea, .page4 textarea.wide, .page4 input.wide {
     width: calc(100% - 40px);
   }
   .page4 select {
@@ -1493,6 +1491,12 @@ footer a:hover {
   header h1 {
     left: 10px;
   }
+}
+
+@media screen and (min-width: 400px) {
+    .page4 .largeButton.larger {
+        max-width: none !important;
+    }
 }
 
 
